Main: Translates and new styles styles

--- a/ambit verd/Content/css/Layout.css
+++ b/ambit verd/Content/css/Layout.css
@@ -3,7 +3,16 @@
 }
 
 .c-black {
-    color: black;
+    color: black !important;
+}
+
+.p-relative {
+    position: relative !important;
+}
+
+.img-farming {
+    position: absolute;
+    bottom: 0px;
 }
 
 .bg-color {
