--- a/ambit verd/Views/Home/Projects.cshtml
+++ b/ambit verd/Views/Home/Projects.cshtml
@@ -1,16 +1,10 @@
-﻿
-@{
-    ViewBag.Title = "Projects";
-}
-
-@section Styles {
+﻿@section Styles {
     @Styles.Render("~/Content/css/projects")
 }
 
 <script async src="//www.instagram.com/embed.js"></script>
 
-
-<h1 class="font-weight-bold text-center mt-5"> Projects</h1>
+<h1 class="font-weight-bold text-center mt-5"> @Ambit_Verd.Resources.Layout.Proyectos </h1>
 <hr class="featurette-divider mb-5 mt-4" />
 
 <div class="container">
