--- a/ambit verd/Views/Home/Services.cshtml
+++ b/ambit verd/Views/Home/Services.cshtml
@@ -5,46 +5,199 @@
 
 
 <div class="container mt-5">
-    <h1 class="font-weight-bold text-center mt-5"> Servicios </h1>
+    <h1 class="font-weight-bold text-center mt-5"> @Ambit_Verd.Resources.Layout.Servicios0 </h1>
     <hr class="featurette-divider mb-5 mt-4" />
 
     <div class="row featurette mt-5">
         <div class="col-md-7">
-            <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <h2 class="featurette-heading"> @Ambit_Verd.Resources.Layout.Servicios1 </h2>
+            <p class="mt-4">
+                @Ambit_Verd.Resources.Layout.Servicios2
+                <br /><br />
+                @Ambit_Verd.Resources.Layout.Servicios3
+            </p>
+            <p>
+                <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                    @Ambit_Verd.Resources.Layout.Servicios4
+                </a>
+            </p>
+            <div class="collapse f-size-content" id="collapseExample">
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item p-2 pl-4">
+                        @Ambit_Verd.Resources.Layout.Servicios5
+                    </li>
+                    <li class="list-group-item p-2 pl-4">
+                        @Ambit_Verd.Resources.Layout.Servicios6
+                    </li>
+                    <li class="list-group-item p-2 pl-4">
+                        @Ambit_Verd.Resources.Layout.Servicios7
+                    </li>
+                    <li class="list-group-item p-2 pl-4">
+                        @Ambit_Verd.Resources.Layout.Servicios8
+                    </li>
+                    <li class="list-group-item p-2 pl-4">
+                        @Ambit_Verd.Resources.Layout.Servicios9
+                    </li>
+                    <li class="list-group-item p-2 pl-4">
+                        @Ambit_Verd.Resources.Layout.Servicios10
+                    </li>
+                    <li class="list-group-item p-2 pl-4">
+                        @Ambit_Verd.Resources.Layout.Servicios11
+                    </li>
+                </ul>
+            </div>
         </div>
         <div class="col-md-5">
-            <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="500x500" style="width: 500px; height: 500px;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22500%22%20height%3D%22500%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20500%20500%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1761575b52e%20text%20%7B%20fill%3A%23AAAAAA%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A25pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1761575b52e%22%3E%3Crect%20width%3D%22500%22%20height%3D%22500%22%20fill%3D%22%23EEEEEE%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22185.1171875%22%20y%3D%22261.1%22%3E500x500%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true">
+            <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" style="width: 100%;" src="~/Content/img/services/servicios.jpg" data-holder-rendered="true">
         </div>
     </div>
     <hr class="featurette-divider my-5" />
     <div class="row featurette">
         <div class="col-md-7 order-md-2">
-            <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <h2 class="featurette-heading"> @Ambit_Verd.Resources.Layout.Servicios12 </h2>
+            <p class="mt-4">
+                @Ambit_Verd.Resources.Layout.Servicios13
+                <br /> <br />
+                @Ambit_Verd.Resources.Layout.Servicios14
+            </p>
+
+            <div id="accordion" class="f-size-content ">
+                <div class="card ">
+                    <div class="card-header" id="headingOne">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link font-weight-bold collapsed" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                                @Ambit_Verd.Resources.Layout.Servicios15
+                            </button>
+                        </h5>
+                    </div>
+
+                    <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+                        <div class="card-body">
+                            <ul class="list-group list-group-flush ">
+                                <li class="list-group-item p-2 pl-4">
+                                    @Ambit_Verd.Resources.Layout.Servicios16
+                                </li>
+                                <li class="list-group-item p-2 pl-4">
+                                    @Ambit_Verd.Resources.Layout.Servicios17
+                                </li>
+                                <li class="list-group-item p-2 pl-4">
+                                    @Ambit_Verd.Resources.Layout.Servicios18
+                                </li>
+                                <li class="list-group-item p-2 pl-4">
+                                    @Ambit_Verd.Resources.Layout.Servicios19
+                                </li>
+                                <li class="list-group-item p-2 pl-4">
+                                    @Ambit_Verd.Resources.Layout.Servicios20
+                                </li>
+                                <li class="list-group-item p-2 pl-4">
+                                    @Ambit_Verd.Resources.Layout.Servicios21
+                                </li>
+                                <li class="list-group-item p-2 pl-4">
+                                    @Ambit_Verd.Resources.Layout.Servicios22
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header" id="headingTwo">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed font-weight-bold" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+
+                                @Ambit_Verd.Resources.Layout.Servicios23
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                        <div class="card-body">
+                            <ul class="list-group list-group-flush ">
+                                <li class="list-group-item p-2 pl-4">
+                                    @Ambit_Verd.Resources.Layout.Servicios24
+                                </li>
+                                <li class="list-group-item p-2 pl-4">
+                                    @Ambit_Verd.Resources.Layout.Servicios25
+                                </li>
+                                <li class="list-group-item p-2 pl-4">
+                                    @Ambit_Verd.Resources.Layout.Servicios26
+                                </li>
+                                <li class="list-group-item p-2 pl-4">
+                                    @Ambit_Verd.Resources.Layout.Servicios27
+                                </li>
+                                <li class="list-group-item p-2 pl-4">
+                                    @Ambit_Verd.Resources.Layout.Servicios28
+                                </li>
+                                <li class="list-group-item p-2 pl-4">
+                                    @Ambit_Verd.Resources.Layout.Servicios29
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="col-md-5 order-md-1">
-            <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="500x500" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22500%22%20height%3D%22500%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20500%20500%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1761575b532%20text%20%7B%20fill%3A%23AAAAAA%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A25pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1761575b532%22%3E%3Crect%20width%3D%22500%22%20height%3D%22500%22%20fill%3D%22%23EEEEEE%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22185.1171875%22%20y%3D%22261.1%22%3E500x500%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true" style="width: 500px; height: 500px;">
+        <div class="col-md-5">
+            <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" style="width: 100%;" src="~/Content/img/services/servicios2.png" data-holder-rendered="true">
         </div>
     </div>
     <hr class="featurette-divider  my-5" />
     <div class="row featurette">
         <div class="col-md-7">
-            <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <h2 class="featurette-heading"> @Ambit_Verd.Resources.Layout.Servicios30  </h2>
+            <p class="mt-2">
+                @Ambit_Verd.Resources.Layout.Servicios31
+                <br /><br />
+                @Ambit_Verd.Resources.Layout.Servicios32
+                <br /><br />
+            <p>
+                <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample3" role="button" aria-expanded="false" aria-controls="collapseExample3">
+                    @Ambit_Verd.Resources.Layout.Servicios33
+                </a>
+            </p>
+            <div class="collapse" id="collapseExample3">
+                <ul class="list-group list-group-flush mt-5">
+                    <li class="list-group-item p-2 pl-4">
+                        @Ambit_Verd.Resources.Layout.Servicios34
+                    </li>
+                    <li class="list-group-item p-2 pl-4">
+                        @Ambit_Verd.Resources.Layout.Servicios35
+                    </li>
+                    <li class="list-group-item p-2 pl-4">
+                        @Ambit_Verd.Resources.Layout.Servicios36
+                    </li>
+                    <li class="list-group-item p-2 pl-4">
+                        @Ambit_Verd.Resources.Layout.Servicios37
+                    </li>
+                </ul>
+            </div>
         </div>
         <div class="col-md-5">
-            <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="500x500" style="width: 500px; height: 500px;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22500%22%20height%3D%22500%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20500%20500%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1761575b52e%20text%20%7B%20fill%3A%23AAAAAA%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A25pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1761575b52e%22%3E%3Crect%20width%3D%22500%22%20height%3D%22500%22%20fill%3D%22%23EEEEEE%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22185.1171875%22%20y%3D%22261.1%22%3E500x500%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true">
+            <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" style="width: 100%;" src="~/Content/img/services/servicios3.jpg" data-holder-rendered="true">
         </div>
     </div>
     <hr class="featurette-divider  my-5" />
     <div class="row featurette">
         <div class="col-md-7 order-md-2">
-            <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <h2 class="featurette-heading"> @Ambit_Verd.Resources.Layout.Servicios38  </h2>
+            <ul class="list-group list-group-flush mt-5">
+                <li class="list-group-item p-2 pl-4">
+                    @Ambit_Verd.Resources.Layout.Servicios39
+                </li>
+                <li class="list-group-item p-2 pl-4">
+                    @Ambit_Verd.Resources.Layout.Servicios40
+                </li>
+                <li class="list-group-item p-2 pl-4">
+                    @Ambit_Verd.Resources.Layout.Servicios41
+                </li>
+                <li class="list-group-item p-2 pl-4">
+                    @Ambit_Verd.Resources.Layout.Servicios42
+                </li>
+                <li class="list-group-item p-2 pl-4">
+                    @Ambit_Verd.Resources.Layout.Servicios43
+                </li>
+            </ul>
         </div>
-        <div class="col-md-5 order-md-1">
-            <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="500x500" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22500%22%20height%3D%22500%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20500%20500%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1761575b532%20text%20%7B%20fill%3A%23AAAAAA%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A25pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1761575b532%22%3E%3Crect%20width%3D%22500%22%20height%3D%22500%22%20fill%3D%22%23EEEEEE%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22185.1171875%22%20y%3D%22261.1%22%3E500x500%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true" style="width: 500px; height: 500px;">
+        <div class="col-md-5">
+            <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" style="width: 100%;" src="~/Content/img/services/servicios4.png" data-holder-rendered="true">
         </div>
     </div>
 </div>
