--- a/ambit verd/Views/Home/WhoWeAre.cshtml
+++ b/ambit verd/Views/Home/WhoWeAre.cshtml
@@ -1,9 +1,4 @@
-﻿
-@{
-    ViewBag.Title = "WhoWeAre";
-}
-
-@section Styles {
+﻿@section Styles {
     @Styles.Render("~/Content/css/whoweare")
 }
 
@@ -13,6 +8,7 @@
     <hr class="featurette-divider mb-5 mt-4" />
 
     <label class="mt-5">
+        @Ambit_Verd.Resources.Layout.WeAre1
         Àmbit Verd es una empresa de obras y servicios integrales de jardinería comprometidos con ofrecer a nuestros clientes y empresas las mejores soluciones a sus necesidades en cualquier aspecto relacionado con jardines y espacios verdes.
     </label>
     <label>
