--- a/ambit verd/Views/Shared/Partials/_footer.cshtml
+++ b/ambit verd/Views/Shared/Partials/_footer.cshtml
@@ -1,10 +1,11 @@
-﻿<footer class="text-muted py-3 bg-color">
+﻿<footer class="text-muted py-3 bg-color p-relative">
+    <img class="img-farming" src="~/Content/img/farming.png"/>
     <div class="container mt-3 text-center">
         <label class="float-right">
-            <a href="#">Back to top</a>
+            <a href="#"> @Ambit_Verd.Resources.Layout.footer0 </a>
         </label>
         <label>
-            ©Àmbit Verd Serveis Integrals de Jardineria S.L. · Puigcerdà · Tel 667 554 059 · info@ambitverd.com 
+            @Ambit_Verd.Resources.Layout.footer1
         </label>
     </div>
     <div class="footer-created-by-AJimenez">
@@ -21,5 +22,5 @@
         <a href="" target="_blank">
             <img src="~/Content/img/footer/web.png" class="mx-2" width="25" alt="Web de Alejandro Jiménez" />
         </a>
-</div>
+    </div>
 </footer>
