--- a/ambit verd/Content/css/Services.scss
+++ b/ambit verd/Content/css/Services.scss
@@ -1,1 +1,26 @@
-﻿
+﻿.f-size-content {
+    font-size: 12px;
+}
+
+.btn-link {
+    color: #6abb3d !important;
+}
+
+.btn-primary {
+    color: #fff;
+    background-color: #6abb3d !important;
+    border-color: #6ABB68 !important;
+
+    &:hover {
+        background-color: #179654 !important;
+    }
+
+    &:active {
+    }
+
+    &:focus {
+        -webkit-box-shadow: none !important;
+        -moz-box-shadow: none !important;
+        box-shadow: none !important;
+    }
+}
