--- a/ambit verd/Views/Home/Index.cshtml
+++ b/ambit verd/Views/Home/Index.cshtml
@@ -1,8 +1,4 @@
-﻿@{
-    ViewBag.Title = Ambit_Verd.Resources.Layout.Name;
-}
-
-@section Styles {
+﻿@section Styles {
     @Styles.Render("~/Content/css/index")
 }
 
@@ -10,7 +6,7 @@
     <div class="position-relative img-base">
         <img class="position-absolute img-logo-border" src="~/Content/img/logo-border.png" />
         <button class=" position-absolute button" type="button" data-toggle="modal" data-target="#myModal">
-            Pide Información
+            @Ambit_Verd.Resources.Layout.Index0
             <div class="button__horizontal"></div>
             <div class="button__vertical"></div>
         </button>
@@ -22,7 +18,6 @@
                 <div class="my-3 p-3">
                     <a href="/home/services"> <h2 class="display-5 c-black"> @Ambit_Verd.Resources.Layout.Servicios </h2> </a>
                     <hr class="featurette-divider my-1" />
-                    <p class="lead">And an even wittier subheading.</p>
                 </div>
                 <a href="/home/services"> <img class="bg-dark box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;" src="~/Content/img/index-1.jpg" /> </a>
             </div>
@@ -30,7 +25,6 @@
                 <div class="my-3 p-3">
                     <a href="/home/projects"> <h2 class="display-5 c-black"> @Ambit_Verd.Resources.Layout.Proyectos </h2> </a>
                     <hr class="featurette-divider my-1" />
-                    <p class="lead">And an even wittier subheading.</p>
                 </div>
                 <a href="/home/projects"> <img class="bg-dark box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;" src="~/Content/img/index-2.png" /> </a>
             </div>
@@ -40,7 +34,6 @@
                 <div class="my-3 p-3">
                     <a href="/home/WhoWeAre"> <h2 class="display-5 c-black"> @Ambit_Verd.Resources.Layout.Quienes_Somos </h2> </a>
                     <hr class="featurette-divider my-1" />
-                    <p class="lead">And an even wittier subheading.</p>
                 </div>
                 <a href="/home/WhoWeAre"> <img class="bg-dark box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;" src="~/Content/img/index-3.png" /> </a>
             </div>
@@ -48,7 +41,6 @@
                 <div class="my-3 p-3">
                     <a href="/home/Contact"> <h2 class="display-5 c-black"> @Ambit_Verd.Resources.Layout.Contacto </h2> </a>
                     <hr class="featurette-divider my-1" />
-                    <p class="lead">And an even wittier subheading.</p>
                 </div>
                 <a href="/home/Contact"> <img class="bg-dark box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;" src="~/Content/img/index-4.jpg" /> </a>
             </div>
