--- a/ambit verd/Views/Shared/Partials/_modal.cshtml
+++ b/ambit verd/Views/Shared/Partials/_modal.cshtml
@@ -5,23 +5,17 @@
 
             <!-- Modal Header -->
             <div class="modal-header">
-                <h4 class="modal-title">Modal Heading</h4>
+                <h4 class="modal-title"> @Ambit_Verd.Resources.Layout.modal0 </h4>
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
             </div>
 
             <!-- Modal body -->
-            <div class="modal-body">
-                <form method="post" action="@Url.Action("sendEmail","home")">
-                    <div>
-                        <label for="email">Status</label>
-                    </div>
-                    <div>
-                        <input name="email" type="email" />
-                    </div>
-                    <div>
-                        <input type="submit" @*data-dismiss="modal"*@ value="Submit" />
-                    </div>
-                </form>
+            <div class="modal-body mx-4">
+                <h5 class="row mb-4"> @Ambit_Verd.Resources.Layout.modal1 </h5>
+                <label class="row c-black mt-5 font-weight-bold"> <img src="~/Content/img/contact/telefono.png" class="mr-4" /> 667 554 059</label>
+                <label class="row c-black font-weight-bold"> <img src="~/Content/img/contact/email.png" class="mr-4" /> info@ambitverd.com </label>
+                <label class="row font-weight-bold"> <img src="~/Content/img/contact/twitter.png" class="mr-4" /> <a class="c-black" href="https://twitter.com/Ambit_Verd" target="_blank"> Twitter Ambit Verd </a> </label>
+                <label class="row font-weight-bold"> <img src="~/Content/img/contact/instagram.png" class="mr-4" /> <a class="c-black" href="https://www.instagram.com/ambit_verd/?hl=es" target="_blank"> Instagram Ambit Verd </a> </label>
             </div>
         </div>
     </div>
