--- a/ambit verd/Views/Shared/_Layout.cshtml
+++ b/ambit verd/Views/Shared/_Layout.cshtml
@@ -4,11 +4,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title</title>
+    <title>Ambit Verd</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+    <link rel="icon" type="image/png" href="~/Content/img/icologo.ico.ico" />
     @Styles.Render("~/Content/css/layout")
-    
+
 </head>
 <body>
 
