Mejoras visuales a nivel de mobile

--- a/ambit verd/Views/Shared/Partials/_navbar.cshtml
+++ b/ambit verd/Views/Shared/Partials/_navbar.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="bg-color">
     <nav class="navbar navbar-expand-lg navbar-light bg-light bg-color">
         <div class="container">
-            <a class="navbar-brand" href="#"> <img width="100%" src="~/Content/img/logo.png" /> </a>
+            <a class="navbar-brand" href="#"> <img class="img-navbar" src="~/Content/img/logo.png" /> </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
