--- a/ambit verd/Content/css/index.css
+++ b/ambit verd/Content/css/index.css
@@ -6,6 +6,31 @@
   min-width: 420px;
   max-width: 550px; }
 
+.img-navbar {
+  width: 100%; }
+
+.img-index {
+  border-radius: 21px 21px 21px 21px;
+  width: 356px;
+  height: 304px;
+  box-shadow: 5px 3px 30px 0px rgba(0, 0, 0, 0.75); }
+
+.img-index:hover {
+  top: 2px;
+  left: 1px;
+  box-shadow: 1px 0px 24px 0px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 1px 0px 24px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 1px 0px 24px 0px rgba(0, 0, 0, 0.75); }
+
+@media (max-width: 600px) {
+  .img-navbar {
+    width: 300px; }
+  .img-logo-border {
+    min-width: 300px;
+    max-width: 400px; }
+  .img-base {
+    height: 800px; } }
+
 .img-base {
   width: 100%;
   height: 901px;
@@ -89,3 +114,26 @@
 @media (max-width: 767px) {
   .w-50 {
     width: 100% !important; } }
+
+@media (max-width: 500px) {
+  .img-navbar {
+    width: 250px; }
+  .img-base {
+    height: 700px; }
+  .button {
+    width: 50%;
+    font-size: 11px; } }
+
+@media (max-width: 400px) {
+  .img-navbar {
+    width: 200px; }
+  .img-logo-border {
+    min-width: 250px;
+    max-width: 350px; }
+  .img-base {
+    height: 600px; } }
+
+@media (max-width: 320px) {
+  .img-navbar {
+    width: 150px;
+    margin: 10%; } }
