--- a/ambit verd/Views/Shared/Partials/_navbar.cshtml
+++ b/ambit verd/Views/Shared/Partials/_navbar.cshtml
@@ -26,7 +26,7 @@
                 <span class="navbar-text">
                     @Html.ActionLink("Spanish", "Change", "Home", new { Lang = "es" }, new { @class = "flag-icon-sp" })
                     @Html.ActionLink("Catalan", "Change", "Home", new { Lang = "ca" }, new { @class = "flag-icon-cat" })
-                    @Html.ActionLink("Catalan", "Change", "Home", new { Lang = "fr" }, new { @class = "flag-icon-fr" })
+                    @Html.ActionLink("Frances", "Change", "Home", new { Lang = "fr" }, new { @class = "flag-icon-fr" })
                 </span>
             </div>
         </div>
